Fix error text stretching form

--- a/client/Talksport/src/app/features/details/details.css
+++ b/client/Talksport/src/app/features/details/details.css
@@ -143,7 +143,9 @@ main {
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+        width: 350px;
         min-height: 300px;
+        max-width: 450px;
 
         .editForm {
             display: flex;
@@ -243,8 +245,15 @@ main {
         border-color: #ffffff;
     }
     
-    .error{
-        color: red;
-        margin: -1.2em 0 -1em 0;
+    .errorText,
+    .error {
+        font-size: 0.8rem;
+        color: #ff0000;
+        margin-top: -15px;
+        margin-bottom: -5px;
+        white-space: normal;
+        word-wrap: break-word;
+        max-width: 90%;
+        text-align: left;
     }
 }
