--- a/client/Talksport/src/app/features/register/register.css
+++ b/client/Talksport/src/app/features/register/register.css
@@ -10,8 +10,9 @@ main {
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+        width: 350px;
         min-height: 300px;
-        min-width: 450px;
+        max-width: 450px;
 
         .registerForm {
             display: flex;
@@ -42,7 +43,7 @@ main {
         border-color: #fff;
     }
 
-    .input-error{
+    .input-error {
         min-width: 100%;
         border-color: red;
     }
@@ -90,11 +91,21 @@ main {
     .error{
         display: flex;
         flex-direction: column;
-        color: red;
-        margin: -1.2em 0 -1em 0;
     }
 
-    .passwords{
+    .errorText,
+    .error {
+        font-size: 0.8rem;
+        color: #ff0000;
+        margin-top: -15px;
+        margin-bottom: -5px;
+        white-space: normal;
+        word-wrap: break-word;
+        max-width: 90%;
+        text-align: left;
+    }
+
+    .passwords {
         min-width: 100%;
         display: flex;
         flex-direction: column;
